objects/SellingSupportProgramYear__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Parent AR record where the program funds are allocation. Dealers associated with this Parent AR draw from this Program Year record</description>
        <inlineHelpText>The Parent AR record where the program funds are allocation. Dealers associated with this Parent AR draw from this Program Year record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Selling Support Program Years</relationshipLabel>
        <relationshipName>Selling_Support_Program_Years</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval Status for the Selling Support Program Year</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                    <default>true</default>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <isActive>false</isActive>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <description>The Selling Support dollars that are available to dealers. Calculation of Program Year Allocation - Approved Requests - Pending Requests + Balance Adjustments</description>
        <formula>Program_Year_Allocation__c -  Total_Approved_Requests__c -  Total_Pending_Requests__c +  Total_Balance_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Selling Support dollars that are available to dealers. Calculation of Program Year Allocation - Approved Requests - Pending Requests + Balance Adjustments</inlineHelpText>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BB_Ind_Curr_Year__c</fullName>
        <description>Process Builder puts a &quot;1&quot; in this field if the Selling Support Year is in the current year everytime a record is created or updated.</description>
        <label>BB Ind Curr Year Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_Ind_Prev_Year__c</fullName>
        <description>The process builder puts a 1 in this record is for the previous year.</description>
        <label>BB Ind Prev Year Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessBuilderProgramEndDate__c</fullName>
        <description>End Date for the Business Builder Program Year</description>
        <formula>BusinessBuilderProgramYear__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Builder Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessBuilderProgramStartDate__c</fullName>
        <description>Start Date for the Business Builder Program Year</description>
        <formula>BusinessBuilderProgramYear__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Builder Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessBuilderProgramStatus__c</fullName>
        <description>Status of the registration record.</description>
        <inlineHelpText>Status of the registration record.</inlineHelpText>
        <label>Business Builder Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Enrolled</fullName>
                    <default>true</default>
                    <label>Not Enrolled</label>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessBuilderProgramTier__c</fullName>
        <description>Program Tier for the Business Builder Program Tier</description>
        <label>Business Builder Program Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program Dealer</fullName>
                </value>
                <value>
                    <fullName>Qualified Dealer</fullName>
                </value>
                <value>
                    <fullName>Certified Expert Dealer</fullName>
                </value>
                <value>
                    <fullName>Elite Certified Expert Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessBuilderProgramYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Business Builder Program Year associated to the Selling Support Program Year</description>
        <label>Business Builder Program Year</label>
        <referenceTo>BusinessBuilderProgramYear__c</referenceTo>
        <relationshipLabel>Selling Support Program Years</relationshipLabel>
        <relationshipName>Selling_Support_Program_Years</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrolled_Count__c</fullName>
        <description>If the status is &quot;Enrolled&quot;, than 1 else 0.</description>
        <formula>If(text(BusinessBuilderProgramStatus__c)=&quot;Enrolled&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LPSProjectNumberofFieldDays__c</fullName>
        <description>Projected number of Field Days annually</description>
        <inlineHelpText>Projected number of Field Days annually</inlineHelpText>
        <label>LPS Project Number of Field Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LPSworkingmin100FieldDays__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We have an LPS who works a minimum of 100 Field Days (2.5 days per week) annually.</description>
        <inlineHelpText>We have an LPS who works a minimum of 100 Field Days (2.5 days per week) annually.</inlineHelpText>
        <label>LPS working min 100 Field Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Enrolled_Count__c</fullName>
        <description>If status is &quot;Not Enrolled&quot;, then 1 else 0.</description>
        <formula>If(text(BusinessBuilderProgramStatus__c)=&quot;Not Enrolled&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Enrolled Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Year_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The starting balance or allocation for this Parent AR for the Program Year</description>
        <inlineHelpText>The starting balance or allocation for this Parent AR for the Program Year</inlineHelpText>
        <label>Program Year Allocation ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalespersonNumberofFieldDays__c</fullName>
        <description>Projected number of Field Days annually</description>
        <inlineHelpText>Projected number of Field Days annually</inlineHelpText>
        <label>Salesperson Number of Field Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salespersonworkingmin100fielddays__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We have our own salesperson, on our payroll, who works a minimum of 100 field days (2.5 days per week) annually.</description>
        <inlineHelpText>We have our own salesperson, on our payroll, who works a minimum of 100 field days (2.5 days per week) annually.</inlineHelpText>
        <label>Salesperson working min 100 field days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SellingSupportExternalId__c</fullName>
        <description>Naming Convention - Program Year-Account External Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Naming Convention - Program Year-Account External Id</inlineHelpText>
        <label>Selling Support External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TermsandConditionsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Terms and Conditions accepted by the Dealer.</description>
        <inlineHelpText>Terms and Conditions accepted by the Dealer.</inlineHelpText>
        <label>Terms and Conditions Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Requests__c</fullName>
        <description>The automatically calculated sum of all Approved requests tied to this program year.</description>
        <inlineHelpText>The automatically calculated sum of all Approved requests tied to this program year.</inlineHelpText>
        <label>Total Approved Requests</label>
        <summarizedField>AMASellingSupportExpense__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>AMASellingSupportExpense__c.Internal_Status__c</field>
            <operation>equals</operation>
            <value>Approved Sales Operations, Complete - Paid in Full, Complete - Partially Paid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AMASellingSupportExpense__c.Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpense__c.Selling_Support_Program_Year__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Adjustments__c</fullName>
        <description>The automatically calculated sum of all Balance Adjustment records that are entered by Sales Operations to increase or reduce the Selling Support dollars tied to this program year.</description>
        <inlineHelpText>The automatically calculated sum of all Balance Adjustment records that are entered by Sales Operations to increase or reduce the Selling Support dollars tied to this program year.</inlineHelpText>
        <label>Total Balance Adjustments</label>
        <summarizedField>AMASellingSupportExpense__c.SalesOperationsBalanceAdjustment__c</summarizedField>
        <summaryFilterItems>
            <field>AMASellingSupportExpense__c.Type__c</field>
            <operation>equals</operation>
            <value>Balance Adjustment</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpense__c.Selling_Support_Program_Year__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Requests__c</fullName>
        <description>The automatically calculated sum of all Pending requests tied to this program year.</description>
        <inlineHelpText>The automatically calculated sum of all Pending requests tied to this program year.</inlineHelpText>
        <label>Total Pending Requests</label>
        <summarizedField>AMASellingSupportExpense__c.Total_Pending__c</summarizedField>
        <summaryFilterItems>
            <field>AMASellingSupportExpense__c.Internal_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval, Approved by Sales Specialist, Approved by Area Sales Manager, Approved Sales Operations, Entered by Sales Admin</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AMASellingSupportExpense__c.Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>AMASellingSupportExpense__c.Selling_Support_Program_Year__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Selling_Support_Program_Yr_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Selling Support Program Yr ID</label>
        <type>Text</type>
    </fields>
    <label>Selling Support Program Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Year_Allocation__c</columns>
        <columns>Total_Approved_Requests__c</columns>
        <columns>Total_Pending_Requests__c</columns>
        <columns>Total_Balance_Adjustments__c</columns>
        <columns>Available_Balance__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>BusinessBuilderProgramStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selling Support Program Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Support Program Years</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Default record type for Selling Support Program Year records</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BalanceAdjustmentNegative</fullName>
        <active>true</active>
        <description>Balances cannot be a negative number  LPDCR 1772</description>
        <errorConditionFormula>Available_Balance__c &lt; 0</errorConditionFormula>
        <errorMessage>Balances cannot be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Validation_for_Community</fullName>
        <active>false</active>
        <description>Dealer community users cannot edit the Selling Support Program Year name</description>
        <errorConditionFormula>NOT(ISPICKVAL($User.UserType, &apos;Standard&apos;)) &amp;&amp;
 NOT( ISNEW() )</errorConditionFormula>
        <errorMessage>Dealer community users cannot edit the Selling Support Program Year name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSPY_Acct_has_a_BB_SS_and_ASM_Approver</fullName>
        <active>true</active>
        <description>SSPY Account has a BB SS and ASM Approver before Requests can be created</description>
        <errorConditionFormula>ISBLANK(Account__r.Business_Builder_Reimbursement_Approver__c) || ISBLANK( Account__r.ASM_BB_Approver__c) &amp;&amp;  Program_Year_Allocation__c  &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>To create a SSPY Record Business Builder Approvers (Sales Specialist or ASM) are required on the Account record.</errorMessage>
    </validationRules>
</CustomObject>